--- a/wp7-donor/Donor/CalendarYearPage.xaml
+++ b/wp7-donor/Donor/CalendarYearPage.xaml
@@ -111,7 +111,12 @@
 					Foreground="White" FontSize="74"/>
                 </controls:PivotItem.Header>
                 <Grid Margin="0,20,0,0">
-                    <ListBox Margin="0,30,0,0" ItemsSource="{Binding Path=Events.ThisMonthItems}" Name="EventsList" Loaded="EventsList_Loaded" SelectionChanged="EventsList_SelectionChanged" ItemTemplate="{StaticResource CalendarItemTemplate}" Tap="EventsListNext2_Tap">
+                    <ListBox Margin="0,30,0,0" 
+                             ItemsSource="{Binding Path=Events.ThisMonthItems}" Name="EventsList" 
+                             Loaded="EventsList_Loaded" SelectionChanged="EventsList_SelectionChanged" 
+                             ItemTemplate="{StaticResource CalendarItemTemplate}" 
+                             Tap="EventsListNext2_Tap">
+                        
                     </ListBox>
                 </Grid>
             </controls:PivotItem>
