--- a/wp7-donor/Donor/EventEditPage.xaml
+++ b/wp7-donor/Donor/EventEditPage.xaml
@@ -98,18 +98,18 @@
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
             <ScrollViewer>
-        <StackPanel>
-            <toolkit:ListPicker  
+                <StackPanel>
+                    <toolkit:ListPicker  
 			x:Name="EventType" 
 			 Style="{StaticResource ListPickerStyle1}"
 			FullModeHeader="Тип события" 
 			FontSize="24" Foreground="#FF847168"
 			SelectionChanged="EventType_SelectionChanged" 
 			Loaded="EventType_Loaded" BorderBrush="#FF4F3B34" Background="#FF4F3B34">
-            <toolkit:ListPicker.Header>
-            		<TextBlock Text="Тип события" FontSize="24" 
-					Foreground="#FF847168"/>        	
-			</toolkit:ListPicker.Header>
+                        <toolkit:ListPicker.Header>
+                            <TextBlock Text="Тип события" FontSize="24" 
+					Foreground="#FF847168"/>
+                        </toolkit:ListPicker.Header>
                         <toolkit:ListPicker.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal" Background="#FF4F3B34" Margin="0">
@@ -119,12 +119,12 @@
                         </toolkit:ListPicker.ItemTemplate>
                     </toolkit:ListPicker>
 
-            <toolkit:ListPicker x:Name="GiveType" 
+                    <toolkit:ListPicker x:Name="GiveType" 
 			FullModeHeader="Вид кроводачи" FontSize="24" Foreground="#FFDF8D4B" Background="#FF4F3B34" BorderBrush="#FF4F3B34" Style="{StaticResource ListPickerStyle1}">
-            	<toolkit:ListPicker.Header>
-            		<TextBlock Text="Вид кроводачи" FontSize="24" 
-					Foreground="#FF847168"/>        	
-				</toolkit:ListPicker.Header>
+                        <toolkit:ListPicker.Header>
+                            <TextBlock Text="Вид кроводачи" FontSize="24" 
+					Foreground="#FF847168"/>
+                        </toolkit:ListPicker.Header>
                         <toolkit:ListPicker.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal" Background="#FF4F3B34" Margin="0">
@@ -133,18 +133,26 @@
                             </DataTemplate>
                         </toolkit:ListPicker.ItemTemplate>
                     </toolkit:ListPicker>
-            
-            <TextBlock Text="Дата и время"
+
+                    <TextBlock Text="Дата и время"
 			Style="{StaticResource Text24px847168}" Margin="12,0,0,0"/>
-            <StackPanel Orientation="Horizontal">
-                    <toolkit:DatePicker Width="250" Name="Date" 
+                    <StackPanel Orientation="Horizontal">
+                        <toolkit:DatePicker Width="250" Name="Date" 
 					Background="#FF4F3B34" Foreground="#FFDF8D4B"/>
-                    <toolkit:TimePicker x:Name="Time"  Width="200" Value="{Binding Time, Mode=TwoWay}" Background="#FF4F3B34" Foreground="#FFDF8D4B"/>
-            </StackPanel>
-            <TextBlock Text="Место"
+                        <toolkit:TimePicker x:Name="Time"  Width="200" Value="{Binding Time, Mode=TwoWay}" Background="#FF4F3B34" Foreground="#FFDF8D4B"/>
+                    </StackPanel>
+                    <TextBlock Text="Место"
 			 Style="{StaticResource Text24px847168}" Margin="12,0,0,0"/>
-            <TextBox Name="Place" Text="{Binding Place, Mode=TwoWay}"
-			Style="{StaticResource TextBoxStyle1}"/>
+                    
+                <StackPanel Orientation="Horizontal">
+                    <TextBox Name="Place" Text="{Binding Place, Mode=TwoWay}"
+			Style="{StaticResource TextBoxStyle1}" Width="400"/>
+                        <Border>
+                            <Image Height="50" Source="images/ic_map.png" 
+					Stretch="Fill" Width="50" Tap="Image_Tap"/>
+                        </Border>
+                    </StackPanel>
+                    
                 <StackPanel Name="Reminder" Visibility="Collapsed">
                     <TextBlock Text="Напоминание" Style="{StaticResource Text24px847168}" Visibility="Collapsed"/>
                     <toolkit:ListPicker  x:Name="ReminderPeriod" 
