--- a/wp7-donor/Donor/StationPage.xaml
+++ b/wp7-donor/Donor/StationPage.xaml
@@ -114,12 +114,12 @@
                         <TextBlock TextWrapping="Wrap" 
 						Text="Проезд" Style="{StaticResource Text36pxB9A194}"/>
                         <TextBlock TextWrapping="Wrap" 
-						Text="{Binding Transportaion}"
+						Text="{Binding Transportaion}" 
 						Style="{StaticResource Text24pxDF8D4B}"/>
                         <StackPanel Name="BloodFor">
                         <TextBlock TextWrapping="Wrap" 
 						Text="Кровь сдается для" Style="{StaticResource Text36pxB9A194}"/>
-                        <TextBlock Text="{Binding BloodFor}" Style="{StaticResource Text24pxDF8D4B}"/>
+                            <TextBlock Text="{Binding BloodFor}" TextWrapping="Wrap"  Style="{StaticResource Text24pxDF8D4B}"/>
                         </StackPanel>
                     </StackPanel>
                 </Grid>
