--- a/BloodDonor/StationsCell.xib
+++ b/BloodDonor/StationsCell.xib
@@ -3,12 +3,12 @@
 	<data>
 		<int key="IBDocument.SystemTarget">1536</int>
 		<string key="IBDocument.SystemVersion">11G56</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2843</string>
 		<string key="IBDocument.AppKitVersion">1138.51</string>
 		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1926</string>
+			<string key="NS.object.0">1929</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
@@ -157,7 +157,6 @@
 								<string key="NSFrameSize">{320, 43}</string>
 								<reference key="NSSuperview" ref="254241806"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="252328327"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -171,7 +170,7 @@
 						<string key="NSFrameSize">{306, 41}</string>
 						<reference key="NSSuperview" ref="714372468"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="974050666"/>
+						<reference key="NSNextKeyView" ref="252328327"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="111221824">
 							<int key="NSColorSpace">3</int>
@@ -192,6 +191,7 @@
 				<reference key="IBUIBackgroundColor" ref="111221824"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<int key="IBUISelectionStyle">0</int>
+				<bool key="IBUIShowsReorderControl">YES</bool>
 				<reference key="IBUIContentView" ref="254241806"/>
 			</object>
 		</array>
@@ -334,7 +334,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">19</int>
+			<int key="maxID">23</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -397,6 +397,6 @@
 			<string key="stationsTableIndicator.png">{19, 19}</string>
 			<string key="workAtSaturdayIcon.png">{10, 19}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1926</string>
+		<string key="IBCocoaTouchPluginVersion">1929</string>
 	</data>
 </archive>
