--- a/wp7-donor/Donor/EventEditPage.xaml
+++ b/wp7-donor/Donor/EventEditPage.xaml
@@ -179,10 +179,23 @@
                     <TextBlock Text="Комментарии"
 					Style="{StaticResource Text24px847168}"
 					Margin="12,0,0,0"/>
-            <TextBox Text="{Binding Description, Mode=TwoWay}" 
+                    <!--<TextBox AcceptsReturn="True" Height="260" 
+                    Text="{Binding Description, Mode=TwoWay}" 
 			Style="{StaticResource TextBoxStyle1}"
-			Name="Description" />
-        </StackPanel>
+			Name="Description" />-->
+                    <ScrollViewer x:Name="InputScrollViewer">
+                    </ScrollViewer>
+                    <TextBox Style="{StaticResource TextBoxStyle1}" 
+                                 TextWrapping="Wrap" 
+                                 Text="{Binding Description, Mode=TwoWay}" 
+                                 AcceptsReturn="True" 
+                                 x:Name="Description"
+                                 Height="Auto"
+                                 MinHeight="200" TextChanged="Description_TextChanged" KeyDown="Description_KeyDown"/>
+                    <!--TextChanged="inputText_TextChanged" 
+                                 GotFocus="MessageText_GotFocus" 
+                                 Tap="MessageText_Tap" -->
+                </StackPanel>
             </ScrollViewer>
         </Grid>
 
